Switch from margin to padding, fixes issue with bottom of toolbox not visible when scrollbar

--- a/cublockly/cublockly.css
+++ b/cublockly/cublockly.css
@@ -582,8 +582,7 @@ body {
 .blocklyTreeRoot {
   background: none !important;
   border: none !important;
-  margin: 36px 0px 0px 0px !important;
-  padding: 0px 1px !important;
+  padding: 36px 0px 0px 0px !important;
   height: -moz-calc(100% - 37px);     /* Firefox  */
   height: -webkit-calc(100% - 37px);  /* WebKit   */
   height: -o-calc(100% - 37px);       /* Opera    */
